2005-12-19 Perry
 PATCH: [ 1383120 ] Fix background colors in WinMerge
  Src: SyntaxColors.cpp SyntaxColors.h
  Src/Common: OptionsMgr.cpp OptionsMgr.h
 PATCH: [ 1384181 ] Fix byte difference fencepost/infinite loop
  Src: CompareOptions.h ConfigLog.cpp DiffWrapper.cpp DiffWrapper.h
   Merge.dsp PatchDlg.cpp stringdiffs.cpp

2005-12-17 Kimmo
 BUG: [ 1379277 ] typo fix for docs
  Docs/Developers: Plugins.html
 BUG: [ 1375661 ] Readme incomplete in WinMerge 2.5.0.3
  Docs/Users: ReadMe.txt
 PATCH: [ 1382966 ] Remove empty CMergeEditView::AddMod() and ResetMod()
  Src: MergeEditView.cpp MergeEditView.h

2005-12-17 Takashi
 PATCH: [ 1378771 ] Fix for BUG:[ 1376552 ] char offset not getting updated when...
  Src: ChildFrm.cpp MergeEditView.cpp

2005-12-17 Takashi
 PATCH: [ 1378795 ] The searched word is not highlighted correctly
  Src/editlib: ccrystaltextview.cpp

2005-12-17 Perry
 PATCH: [ 1382955 ] Remove unused CompareStats.h include from DirFrame.cpp
  Src: DirFrame.cpp
 PATCH: [ 1376711 ] Change CFile::GetStatus to paths_DoesPathExist
  Src: files.cpp MainFrm.cpp MainFrm.h Merge.cpp MergeDoc.cpp OpenDlg.cpp
   PathContext.cpp
  Src/Common: coretools.cpp

2005-12-16 Kimmo
 PATCH: [ 1381984 ] Folder compare progressdialog could be drawn off-screen
  Src: DirCompProgressDlg.cpp

2005-12-16 Perry
 PATCH: [ 1380083 ] Fix EditBinaryFiles Plugin BuildTmp paths
  Plugins\src_VCPP\EditBinaryFiles: EditBinaryFiles.dsp

2005-12-16 Kimmo
 PATCH: [ 1381975 ] Don't open Open-dialog outside screen
  Src: MainFrm.cpp OpenDlg.cpp
  Src removed file: multimon.h

2005-12-16 Perry
 BUG: [ 1380019 ] Bulgarian translation has wrong language id
  Src/Languages/Bulgarian: MergeBulgarian.rc
 PATCH: [ 1382131 ] English rc file has numbers instead of symbols for language
  Src: Merge.rc
 PATCH: [ 1379227 ] Fix ExpatLibs BuildTmp paths
  Src/ExpatLib: expat_static.dsp
  Src/ExpatMapLib: expat_maps_static.dsp
 PATCH: [ 1379228 ] Fix Merge7zInstaller BuildTmp paths