@@ -1,3 +1,7 @@
+2005-12-19 Kimmo
+ PATCH: [ 1384646 ] Replace Question icons with warning icons in messageboxes
+  Src: DirActions.cpp FileFiltersDlg.cpp MainFrm.cpp MergeDoc.cpp PatchDlg.cpp
+
 2005-12-19 Perry
  PATCH: [ 1383120 ] Fix background colors in WinMerge
   Src: SyntaxColors.cpp SyntaxColors.h
